@@ -964,5 +964,8 @@ cbpPoleSquareTipCentered,shapes,Block,,,Pole Tip Centered,,
 cbpBookShelfDubTopFull01_Poof,shapes,Block,,,Bookcase,,
 cbpBookShelfDubBotFull01_Poof,shapes,Block,,,Bookcase,,
 cbpBowlingBall_Corner,shapes,Block,,,Bowling Ball corner,,
+cbpBillboard,shapes,Block,,,Billboard Strong,,
+cbpMetalPipeStraight_explode,shapes,Block,,,Metal Pipe Straight Explode,,
+cbpBarrelGasQuadA,shapes,Block,,,Barrel Gas Quad A,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
