@@ -1,0 +1,16 @@
+<CBP>
+<append xpath="/materials">
+		<material id="McbpSheet">
+			<property name="damage_category" value="metal"/>
+			<property name="surface_category" value="metal"/>
+			<property name="forge_category" value="iron"/>
+			<property name="Hardness" type="float" value="10000"/>
+			<property name="stepsound" value="metal"/>
+			<property name="stability_glue" value="300"/>
+			<property name="Mass" type="int" value="20"/>
+			<property name="explosionresistance" value="99000"/>
+			<property name="MaxDamage" value="99000"/>
+			<property name="Experience" value="6"/>
+		</material>
+</append>   
+</CBP>
