@@ -1,5 +1,9 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0040 :
+* Added a new material: Sheet Metal?
+* Added some blocks in the new material.
+
 A21.2.001.0039 :
 * Missing icon fixed.
 
